# charts-values

./: .env.exmple  .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
authentik/: README.md  values.yaml
cert-manager/: values.yaml
grafana/: grafana-extra-cm.yaml  grafana-extra-secret.yaml  values.yaml
kubeapps/: grpc.yaml  values.yaml
metallb/: ip.yaml
prometheus/: values.yaml
