[tool.poetry]
name = "charts-values"
version = "0.1.0"
description = "Render the values file of the Helm chart based on environment variables."
authors = ["rogerogers <rogers@rogerogers.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "charts_values"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.4"
jinja2="*"
python-dotenv="*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
